adjustment for namings and preparation for paritition/-Groups