@@ -19,12 +19,16 @@ package org.polypheny.db.adapter.index;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
 import org.junit.Assert;
 import org.junit.Test;
 import org.polypheny.db.algebra.exceptions.ConstraintViolationException;
 import org.polypheny.db.transaction.PUID;
 import org.polypheny.db.transaction.PUID.Type;
 import org.polypheny.db.transaction.PolyXid;
+import org.polypheny.db.type.entity.PolyInteger;
+import org.polypheny.db.type.entity.PolyValue;
 import org.polypheny.db.util.Pair;
 
 
@@ -36,50 +40,50 @@ public class CowHashIndexTest {
         CoWHashIndex idx = new CoWHashIndex( 42L, "idx_test", null, null, Collections.emptyList(), Collections.emptyList() );
         PolyXid xid1 = PolyXid.generateLocalTransactionIdentifier( PUID.randomPUID( Type.NODE ), PUID.randomPUID( Type.TRANSACTION ) );
         PolyXid xid2 = PolyXid.generateLocalTransactionIdentifier( PUID.randomPUID( Type.NODE ), PUID.randomPUID( Type.TRANSACTION ) );
-        Assert.assertEquals( 0, idx.getRaw().size() );
+        Assert.assertEquals( 0, ((List) idx.getRaw()).size() );
         // Insert and delete some values as xid1
-        idx.insert( xid1, Arrays.asList( 1, 2, 3 ), Collections.singletonList( 1 ) );
+        idx.insert( xid1, asPolyValues( 1, 2, 3 ), asPolyValues( 1 ) );
         idx.insertAll( xid1, Arrays.asList(
-                Pair.of( Arrays.asList( 2, 3, 4 ), Collections.singletonList( 2 ) ),
-                Pair.of( Arrays.asList( 3, 4, 5 ), Collections.singletonList( 3 ) ),
-                Pair.of( Arrays.asList( 4, 5, 6 ), Collections.singletonList( 4 ) )
+                Pair.of( asPolyValues( 2, 3, 4 ), asPolyValues( 2 ) ),
+                Pair.of( asPolyValues( 3, 4, 5 ), asPolyValues( 3 ) ),
+                Pair.of( asPolyValues( 4, 5, 6 ), asPolyValues( 4 ) )
         ) );
-        idx.delete( xid1, Arrays.asList( 2, 3, 4 ) );
+        idx.delete( xid1, asPolyValues( 2, 3, 4 ) );
         // Make sure the values are not yet visible by either transaction
-        Assert.assertFalse( idx.contains( xid1, Arrays.asList( 1, 2, 3 ) ) );
-        Assert.assertFalse( idx.contains( xid1, Arrays.asList( 2, 3, 4 ) ) );
-        Assert.assertFalse( idx.contains( xid1, Arrays.asList( 3, 4, 5 ) ) );
-        Assert.assertFalse( idx.contains( xid2, Arrays.asList( 1, 2, 3 ) ) );
-        Assert.assertFalse( idx.contains( xid2, Arrays.asList( 2, 3, 4 ) ) );
-        Assert.assertFalse( idx.contains( xid2, Arrays.asList( 3, 4, 5 ) ) );
+        Assert.assertFalse( idx.contains( xid1, asPolyValues( 1, 2, 3 ) ) );
+        Assert.assertFalse( idx.contains( xid1, asPolyValues( 2, 3, 4 ) ) );
+        Assert.assertFalse( idx.contains( xid1, asPolyValues( 3, 4, 5 ) ) );
+        Assert.assertFalse( idx.contains( xid2, asPolyValues( 1, 2, 3 ) ) );
+        Assert.assertFalse( idx.contains( xid2, asPolyValues( 2, 3, 4 ) ) );
+        Assert.assertFalse( idx.contains( xid2, asPolyValues( 3, 4, 5 ) ) );
         // Invoke atom isolation barrier
         idx.barrier( xid1 );
         // Make sure the values are only visible by transaction 1
-        Assert.assertTrue( idx.contains( xid1, Arrays.asList( 1, 2, 3 ) ) );
-        Assert.assertFalse( idx.contains( xid1, Arrays.asList( 2, 3, 4 ) ) );
-        Assert.assertTrue( idx.contains( xid1, Arrays.asList( 3, 4, 5 ) ) );
-        Assert.assertFalse( idx.contains( xid2, Arrays.asList( 1, 2, 3 ) ) );
-        Assert.assertFalse( idx.contains( xid2, Arrays.asList( 2, 3, 4 ) ) );
-        Assert.assertFalse( idx.contains( xid2, Arrays.asList( 3, 4, 5 ) ) );
+        Assert.assertTrue( idx.contains( xid1, asPolyValues( 1, 2, 3 ) ) );
+        Assert.assertFalse( idx.contains( xid1, asPolyValues( 2, 3, 4 ) ) );
+        Assert.assertTrue( idx.contains( xid1, asPolyValues( 3, 4, 5 ) ) );
+        Assert.assertFalse( idx.contains( xid2, asPolyValues( 1, 2, 3 ) ) );
+        Assert.assertFalse( idx.contains( xid2, asPolyValues( 2, 3, 4 ) ) );
+        Assert.assertFalse( idx.contains( xid2, asPolyValues( 3, 4, 5 ) ) );
         // Commit
         idx.commit( xid1 );
         // Make sure the values are visible by both transactions
-        Assert.assertTrue( idx.contains( xid1, Arrays.asList( 1, 2, 3 ) ) );
-        Assert.assertFalse( idx.contains( xid1, Arrays.asList( 2, 3, 4 ) ) );
-        Assert.assertTrue( idx.contains( xid1, Arrays.asList( 3, 4, 5 ) ) );
-        Assert.assertTrue( idx.contains( xid2, Arrays.asList( 1, 2, 3 ) ) );
-        Assert.assertFalse( idx.contains( xid1, Arrays.asList( 2, 3, 4 ) ) );
-        Assert.assertTrue( idx.contains( xid2, Arrays.asList( 3, 4, 5 ) ) );
+        Assert.assertTrue( idx.contains( xid1, asPolyValues( 1, 2, 3 ) ) );
+        Assert.assertFalse( idx.contains( xid1, asPolyValues( 2, 3, 4 ) ) );
+        Assert.assertTrue( idx.contains( xid1, asPolyValues( 3, 4, 5 ) ) );
+        Assert.assertTrue( idx.contains( xid2, asPolyValues( 1, 2, 3 ) ) );
+        Assert.assertFalse( idx.contains( xid1, asPolyValues( 2, 3, 4 ) ) );
+        Assert.assertTrue( idx.contains( xid2, asPolyValues( 3, 4, 5 ) ) );
         // Insert, then rollback
-        idx.insert( xid1, Arrays.asList( 2, 3, 4 ), Collections.singletonList( 1 ) );
-        Assert.assertFalse( idx.contains( xid1, Arrays.asList( 2, 3, 4 ) ) );
-        Assert.assertFalse( idx.contains( xid2, Arrays.asList( 2, 3, 4 ) ) );
+        idx.insert( xid1, asPolyValues( 2, 3, 4 ), asPolyValues( 1 ) );
+        Assert.assertFalse( idx.contains( xid1, asPolyValues( 2, 3, 4 ) ) );
+        Assert.assertFalse( idx.contains( xid2, asPolyValues( 2, 3, 4 ) ) );
         idx.barrier( xid1 );
-        Assert.assertTrue( idx.contains( xid1, Arrays.asList( 2, 3, 4 ) ) );
-        Assert.assertFalse( idx.contains( xid2, Arrays.asList( 2, 3, 4 ) ) );
+        Assert.assertTrue( idx.contains( xid1, asPolyValues( 2, 3, 4 ) ) );
+        Assert.assertFalse( idx.contains( xid2, asPolyValues( 2, 3, 4 ) ) );
         idx.rollback( xid1 );
-        Assert.assertFalse( idx.contains( xid1, Arrays.asList( 2, 3, 4 ) ) );
-        Assert.assertFalse( idx.contains( xid2, Arrays.asList( 2, 3, 4 ) ) );
+        Assert.assertFalse( idx.contains( xid1, asPolyValues( 2, 3, 4 ) ) );
+        Assert.assertFalse( idx.contains( xid2, asPolyValues( 2, 3, 4 ) ) );
     }
 
 
@@ -87,8 +91,8 @@ public class CowHashIndexTest {
     public void testDuplicateDetection() {
         CoWHashIndex idx = new CoWHashIndex( 42L, "idx_test", null, null, Collections.emptyList(), Collections.emptyList() );
         PolyXid xid1 = PolyXid.generateLocalTransactionIdentifier( PUID.randomPUID( Type.NODE ), PUID.randomPUID( Type.TRANSACTION ) );
-        idx.insert( xid1, Arrays.asList( 1, 2, 3 ), Collections.singletonList( 1 ) );
-        idx.insert( xid1, Arrays.asList( 1, 2, 3 ), Collections.singletonList( 1 ) );
+        idx.insert( xid1, asPolyValues( 1, 2, 3 ), asPolyValues( 1 ) );
+        idx.insert( xid1, asPolyValues( 1, 2, 3 ), asPolyValues( 1 ) );
         try {
             idx.barrier( xid1 );
             Assert.fail( "Expected ConstraintViolationException not thrown!" );
@@ -99,11 +103,11 @@ public class CowHashIndexTest {
         }
         idx.rollback( xid1 );
         idx.insertAll( xid1, Arrays.asList(
-                Pair.of( Arrays.asList( 2, 3, 4 ), Collections.singletonList( 2 ) ),
-                Pair.of( Arrays.asList( 3, 4, 5 ), Collections.singletonList( 3 ) ),
-                Pair.of( Arrays.asList( 4, 5, 6 ), Collections.singletonList( 4 ) ),
-                Pair.of( Arrays.asList( 3, 4, 5 ), Collections.singletonList( 5 ) ),
-                Pair.of( Arrays.asList( 5, 6, 7 ), Collections.singletonList( 6 ) )
+                Pair.of( asPolyValues( 2, 3, 4 ), asPolyValues( 2 ) ),
+                Pair.of( asPolyValues( 3, 4, 5 ), asPolyValues( 3 ) ),
+                Pair.of( asPolyValues( 4, 5, 6 ), asPolyValues( 4 ) ),
+                Pair.of( asPolyValues( 3, 4, 5 ), asPolyValues( 5 ) ),
+                Pair.of( asPolyValues( 5, 6, 7 ), asPolyValues( 6 ) )
         ) );
         try {
             idx.barrier( xid1 );
@@ -132,18 +136,23 @@ public class CowHashIndexTest {
         CoWHashIndex idx = new CoWHashIndex( 42L, "idx_test", null, null, Collections.emptyList(), Collections.emptyList() );
         PolyXid xid1 = PolyXid.generateLocalTransactionIdentifier( PUID.randomPUID( Type.NODE ), PUID.randomPUID( Type.TRANSACTION ) );
         idx.insertAll( xid1, Arrays.asList(
-                Pair.of( Arrays.asList( 2, 3, 4 ), Collections.singletonList( 2 ) ),
-                Pair.of( Arrays.asList( 3, 4, 5 ), Collections.singletonList( 3 ) ),
-                Pair.of( Arrays.asList( 4, 5, 6 ), Collections.singletonList( 4 ) ),
-                Pair.of( Arrays.asList( 5, 6, 7 ), Collections.singletonList( 5 ) )
+                Pair.of( asPolyValues( 2, 3, 4 ), asPolyValues( 2 ) ),
+                Pair.of( asPolyValues( 3, 4, 5 ), asPolyValues( 3 ) ),
+                Pair.of( asPolyValues( 4, 5, 6 ), asPolyValues( 4 ) ),
+                Pair.of( asPolyValues( 5, 6, 7 ), asPolyValues( 5 ) )
         ) );
         idx.barrier( xid1 );
-        Assert.assertTrue( idx.contains( xid1, Arrays.asList( 3, 4, 5 ) ) );
-        Assert.assertFalse( idx.contains( xid1, Arrays.asList( 1, 2, 3 ) ) );
-        Assert.assertTrue( idx.containsAny( xid1, Arrays.asList( Arrays.asList( 1, 2, 3 ), Arrays.asList( 3, 4, 5 ) ) ) );
-        Assert.assertFalse( idx.containsAny( xid1, Arrays.asList( Arrays.asList( 1, 2, 3 ), Arrays.asList( 0, 1, 2 ) ) ) );
-        Assert.assertTrue( idx.containsAll( xid1, Arrays.asList( Arrays.asList( 3, 4, 5 ), Arrays.asList( 5, 6, 7 ) ) ) );
-        Assert.assertFalse( idx.containsAll( xid1, Arrays.asList( Arrays.asList( 1, 2, 3 ), Arrays.asList( 3, 4, 5 ) ) ) );
+        Assert.assertTrue( idx.contains( xid1, asPolyValues( 3, 4, 5 ) ) );
+        Assert.assertFalse( idx.contains( xid1, asPolyValues( 1, 2, 3 ) ) );
+        Assert.assertTrue( idx.containsAny( xid1, Arrays.asList( asPolyValues( 1, 2, 3 ), asPolyValues( 3, 4, 5 ) ) ) );
+        Assert.assertFalse( idx.containsAny( xid1, Arrays.asList( asPolyValues( 1, 2, 3 ), asPolyValues( 0, 1, 2 ) ) ) );
+        Assert.assertTrue( idx.containsAll( xid1, Arrays.asList( asPolyValues( 3, 4, 5 ), asPolyValues( 5, 6, 7 ) ) ) );
+        Assert.assertFalse( idx.containsAll( xid1, Arrays.asList( asPolyValues( 1, 2, 3 ), asPolyValues( 3, 4, 5 ) ) ) );
+    }
+
+
+    public static List<PolyValue> asPolyValues( Integer... elements ) {
+        return List.copyOf( Arrays.asList( elements ) ).stream().map( PolyInteger::of ).collect( Collectors.toList() );
     }
 
 }
